change background and colors on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,15 +11,15 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
-<body style="background-image: url('./assets/images/flower.jpg');">
+<body style="background-image: url('./assets/images/sand.jpg');">
   <page id="page-container">
     <div id="content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color:rgba(255, 255, 255, 0.87);">
+      <nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color:rgba(255, 255, 255, 0.842);">
         <div class="container">
           <a class="navbar-brand mx-auto text-center" href="./index.html">
-            <h2 class="pt-1" style="color: #89a670">Kaitlyn Steagall <br />
-              <h6 id="email-and-ph">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503)679-6794</h6>
+            <h2 class="pt-1" style="color: rgb(115, 181, 197)">Kaitlyn Steagall <br />
+              <h6 id="email-and-ph-portfolio">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503)679-6794</h6>
             </h2>
           </a>
         </div>
@@ -34,8 +34,8 @@
                   style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
-                    style="color: #89a670">NetPets</a></h5>
-                <a href="https://github.com/NoahSylwester/Netpets" style="color: #89a670">Checkout our collaborative
+                    style="color: rgb(115, 181, 197)">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" style="color: rgb(115, 181, 197)">Checkout our collaborative
                   code</a>
               </div>
             </div>
@@ -47,9 +47,9 @@
                 alt="">
               <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
-                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #89a670">Puffin
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: rgb(115, 181, 197)">Puffin
                     Power</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Project" style="color: #89a670">Checkout more
+                <a href="https://github.com/KaitlynSteagall/Project" style="color: rgb(115, 181, 197)">Checkout more
                   collaborative code</a>
               </div>
             </div>
@@ -60,8 +60,8 @@
               <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
-                    style="color: #89a670">Animal GIPHY API</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #89a670">Checkout my
+                    style="color: rgb(115, 181, 197)">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: rgb(115, 181, 197)">Checkout my
                   ajax code</a>
               </div>
             </div>
@@ -115,13 +115,13 @@
   </page>
 
   <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
-    style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.87)">
+    style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.842)">
     <div class="row mx-auto">
-      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f795a">Email</a></div>
-      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f795a">Call</a></div>
+      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: rgb(84, 133, 145)">Email</a></div>
+      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: rgb(84, 133, 145)">Call</a></div>
       <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
-        style="color: #6f795a"><i class="fab fa-linkedin"></i></a></div>
-      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f795a"><i
+        style="color: rgb(84, 133, 145)"><i class="fab fa-linkedin"></i></a></div>
+      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: rgb(84, 133, 145)"><i
         class="fab fa-github-square"></i></a></div>
     </div>
   </footer>
