--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <div class="container">
           <a class="navbar-brand mx-auto text-center" href="./index.html">
             <h2 class="pt-1" style="color: rgb(115, 181, 197)">Kaitlyn Steagall <br />
-              <h6 id="email-and-ph-portfolio">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503)679-6794</h6>
+              <h6 id="email-and-ph-portfolio">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503) 679-6794</h6>
             </h2>
           </a>
         </div>
@@ -28,10 +28,10 @@
       <section class="container" style="border-radius: 10px; background-color:rgba(236, 236, 236, 0.801);">
 
         <div class="row mx-auto my-3">
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
               <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
-                  style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
+                  style="width: 14rem;" class="card-img-top mx-auto mt-3" alt="GIF of NetPets Game"></a>
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
                     style="color: rgb(115, 181, 197)">NetPets</a></h5>
@@ -41,11 +41,10 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto my-4"
-                alt="">
-              <!-- Add GIF/pic once code is updated/page is more styled-->
+              <img src="./assets/images/puffinScreenshot.JPG" style="width: 15rem;" class="card-img-top mx-auto mt-4 mb-3"
+                alt="Screenshot of PuffinPower project">
               <div class="card-body">
                 <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: rgb(115, 181, 197)">Puffin
                     Power</a></h5>
@@ -55,9 +54,9 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <img src="" class="card-img-top" alt=""> <!-- Add GIF/pic once code is updated/page is more styled-->
+              <img src="./assets/gifs/AnimalGIFGIF.gif" style="width: 17rem;" class="card-img-top mx-auto my-4" alt="GIF of Animal GIPHY website"> <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
                     style="color: rgb(115, 181, 197)">Animal GIPHY API</a></h5>
