modify text color on portfolio page to make it a little more green to match w/ about me page

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-lg navbar-light mb-5" style="background-color:rgba(255, 255, 255, 0.842);">
         <div class="container">
           <a class="navbar-brand mx-auto text-center" href="./index.html">
-            <h2 class="pt-1" style="color: rgb(115, 181, 197)">Kaitlyn Steagall <br />
+            <h2 class="pt-1" style="color: #73c2c5">Kaitlyn Steagall <br />
               <h6 id="email-and-ph-portfolio">Email: kaitlynsteagall.webdev@gmail.com | Phone: (503) 679-6794</h6>
             </h2>
           </a>
@@ -38,8 +38,8 @@
                   style="width: 14rem;" class="card-img-top mx-auto mt-3" alt="GIF of NetPets Game"></a>
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
-                    style="color: rgb(115, 181, 197)">NetPets</a></h5>
-                <a href="https://github.com/NoahSylwester/Netpets" style="color: rgb(115, 181, 197)">Checkout our collaborative
+                    style="color: #9ab6b8">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" style="color: #9ab6b8">Checkout our collaborative
                   code</a>
               </div>
             </div>
@@ -50,9 +50,9 @@
               <img src="./assets/images/puffinScreenshot.JPG" style="width: 15rem;" class="card-img-top mx-auto mt-4 mb-3"
                 alt="Screenshot of PuffinPower project">
               <div class="card-body">
-                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: rgb(115, 181, 197)">Puffin
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #9ab6b8">Puffin
                     Power</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Project" style="color: rgb(115, 181, 197)">Checkout more
+                <a href="https://github.com/KaitlynSteagall/Project" style="color: #9ab6b8">Checkout more
                   collaborative code</a>
               </div>
             </div>
@@ -63,8 +63,8 @@
               <img src="./assets/gifs/AnimalGIFGIF.gif" style="width: 17rem;" class="card-img-top mx-auto my-4" alt="GIF of Animal GIPHY website"> <!-- Add GIF/pic once code is updated/page is more styled-->
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
-                    style="color: rgb(115, 181, 197)">Animal GIPHY API</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: rgb(115, 181, 197)">Checkout my
+                    style="color: #9ab6b8">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #9ab6b8">Checkout my
                   ajax code</a>
               </div>
             </div>
@@ -120,11 +120,11 @@
   <footer class="navbar navbar-expand-lg navbar-light mt-5 pt-3 pb-3 text-center"
     style="position: absolute; bottom: 0; width: 100%; text-align: center; background-color:rgba(255, 255, 255, 0.842)">
     <div class="row mx-auto">
-      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: rgb(84, 133, 145)">Email</a></div>
-      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: rgb(84, 133, 145)">Call</a></div>
+      <div class="footerIcons pr-3 pl-4"><a href="mailto:kaitlynsteagall@gmail.com" style="color: #6f9496">Email</a></div>
+      <div class="footerIcons pl-3 pr-3"><a href="tel:(503)679-6794" style="color: #6f9496">Call</a></div>
       <div class="footerIcons pl-4 pr-4"><a href="https://www.linkedin.com/in/kaitlyn-steagall/"
-        style="color: rgb(84, 133, 145)"><i class="fab fa-linkedin"></i></a></div>
-      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: rgb(84, 133, 145)"><i
+        style="color: #6f9496"><i class="fab fa-linkedin"></i></a></div>
+      <div class="pl-4 pr-4"><a href="https://github.com/KaitlynSteagall" style="color: #6f9496"><i
         class="fab fa-github-square"></i></a></div>
     </div>
   </footer>
