add button for returning to home page

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
         </div>
 
         <!-- <div class="row mx-auto my-3">
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
               <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
                   style="width: 13rem;" class="card-img-top mx-auto mt-3" alt="NetPets Game"></a>
@@ -85,11 +85,10 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
               <img src="./assets/images/puffinScreenshot.JPG" style="width: 13rem;" class="card-img-top mx-auto mt-3"
                 alt="">
-              Add GIF/pic once code is updated/page is more styled
               <div class="card-body">
                 <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #89a670">Puffin
                     Power</a></h5>
@@ -99,9 +98,9 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-8 mx-auto my-4">
+          <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <img src="" class="card-img-top" alt=""> Add GIF/pic once code is updated/page is more styled
+              <img src="" class="card-img-top" alt="">
               <div class="card-body">
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
                     style="color: #89a670">Animal GIPHY API</a></h5>
@@ -111,6 +110,17 @@
             </div>
           </div>
         </div> -->
+
+        <div class="row">
+          <div class="mx-auto mb-4">
+            <div class="card text-center">
+              <div class="card-body">
+                <span class="card-title"><a href="./index.html" target="blank"
+                    style="color: #9ab6b8">Back to About Me & Resume</a></span>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </section>
 
