add blank targets to links in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,12 @@
         <div class="row mx-auto my-3">
           <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <a href="https://noahsylwester.github.io/Netpets/"><img src="./assets/gifs/NetPets.gif"
+              <a href="https://noahsylwester.github.io/Netpets/" target="blank"><img src="./assets/gifs/NetPets.gif"
                   style="width: 14rem;" class="card-img-top mx-auto mt-3" alt="GIF of NetPets Game"></a>
               <div class="card-body">
                 <h5 class="card-title"><a href="https://noahsylwester.github.io/Netpets/"
-                    style="color: #9ab6b8">NetPets</a></h5>
-                <a href="https://github.com/NoahSylwester/Netpets" style="color: #9ab6b8">Checkout our collaborative
+                    target="blank" style="color: #9ab6b8">NetPets</a></h5>
+                <a href="https://github.com/NoahSylwester/Netpets" target="blank" style="color: #9ab6b8">Checkout our collaborative
                   code</a>
               </div>
             </div>
@@ -47,12 +47,12 @@
 
           <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <img src="./assets/images/puffinScreenshot.JPG" style="width: 15rem;" class="card-img-top mx-auto mt-4 mb-3"
-                alt="Screenshot of PuffinPower project">
+              <a href="https://grumpy-puffin-4289.herokuapp.com/" target="blank"><img src="./assets/images/puffinScreenshot.JPG" 
+                style="width: 15rem;" class="card-img-top mx-auto mt-4 mb-3" alt="Screenshot of PuffinPower project"></a>
               <div class="card-body">
-                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" style="color: #9ab6b8">Puffin
+                <h5 class="card-title"><a href="https://grumpy-puffin-4289.herokuapp.com/" target="blank" style="color: #9ab6b8">Puffin
                     Power</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Project" style="color: #9ab6b8">Checkout more
+                <a href="https://github.com/KaitlynSteagall/PuffinPower" target="blank" style="color: #9ab6b8">Checkout more
                   collaborative code</a>
               </div>
             </div>
@@ -60,11 +60,11 @@
 
           <div class="col-xl-4 col-md-8 mx-auto my-4">
             <div class="card text-center" style="height: 21.75rem;">
-              <img src="./assets/gifs/AnimalGIFGIF.gif" style="width: 17rem;" class="card-img-top mx-auto my-4" alt="GIF of Animal GIPHY website"> <!-- Add GIF/pic once code is updated/page is more styled-->
-              <div class="card-body">
+              <a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/" target="blank"><img src="./assets/gifs/AnimalGIFGIF.gif" style="width: 17rem;" class="card-img-top mx-auto my-4" alt="GIF of Animal GIPHY website"> <!-- Add GIF/pic once code is updated/page is more styled-->
+              <div class="card-body"></a>
                 <h5 class="card-title"><a href="https://kaitlynsteagall.github.io/Animal-GIPHY-API/"
-                    style="color: #9ab6b8">Animal GIPHY API</a></h5>
-                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" style="color: #9ab6b8">Checkout my
+                    target="blank" style="color: #9ab6b8">Animal GIPHY API</a></h5>
+                <a href="https://github.com/KaitlynSteagall/Animal-GIPHY-API" target="blank"style="color: #9ab6b8">Checkout my
                   ajax code</a>
               </div>
             </div>
